# runnit

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
landing/: index.html
sidecar/: build.js  index.js  package.json  pnpm-lock.yaml  worker-src.js
src/: App.tsx  main.tsx  monaco-setup.ts  styles.css
src-tauri/: Cargo.toml  build.rs  generate-icon.cjs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Editor.tsx  Logo.tsx  OutputPanel.tsx  Splitter.tsx  TabsBar.tsx  Toolbar.tsx
src/hooks/: useDebounce.ts
src/lib/: files.ts  runner.ts  theme.ts  transpile.ts
