[package]
name = "runnit"
version = "0.1.0"
description = "A live JavaScript/TypeScript playground desktop app"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

# The library that contains the actual app logic. `main.rs` is a thin shim so
# the same code can be reused (e.g. mobile targets) and integration-tested.
[lib]
name = "runnit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
